# PyGuardQA

./: .gitignore  README.md  WORKSPACE.bak  conftest.py  module.bazel  requirements.txt
src/: BUILD
src/ui_pages/: build.bazel  home_page.py
src/utils/: build.bazel
tests/: BUILD  build.bazel
tests/ui/: test_home_page.py
