# tests/BUILD.bazel
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "my_first_bazel_test", # A descriptive name for your test target
    srcs = ["test_home_page.py"], # Assuming you have a test file named this
    main = "test_home_page.py", # This is the entry point for the test
    deps = [
        "//src/utils:utils_lib", # If your test uses your utils
        "@pip//:pytest",
        "@pip//:requests", # If your API test uses requests
        # Add any other pip dependencies this specific test file needs
    ],
)