# pages/BUILD.bazel
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "pages_lib",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/utils:utils_lib", # Dependency on your own utils_lib
        "@pip//:playwright",     # Playwright dependency
        # Add other specific pip dependencies from your requirements.txt used here
    ],
)