# src/utils/BUILD.bazel
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "utils_lib",
    srcs = glob(["*.py"]), # Automatically finds all .py files in this dir
    visibility = ["//visibility:public"], # Makes this library usable by other targets
    deps = [
        "@pip//:requests", # Example: if your utils use the 'requests' library
        # Add other specific pip dependencies from your requirements.txt used here
    ],
)